--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gasto na Obra</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="flex flex-col w-full items-center justify-start h-screen bg-gray-100 py-8 px-4 font-poppins"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
